SFDCProject/src/objects/Service_Contract_Event__c.object
<CustomObject>
    <fields>
        <fullName>Previous_Date_Cancelled__c</fullName>
        <description>Added for BSKY-6773 12/29/2015</description>
        <label>Previous Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Creation_Date__c</fullName>
        <formula>Service_Contract__r.Opportunity__r.Project_Creation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Email__c</fullName>
        <formula>Project_Manager__r.Email</formula>
        <label>Project Planner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Phone__c</fullName>
        <formula>Project_Manager__r.Phone</formula>
        <label>Project Planner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Contract_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Service_Contract__r.Opportunity__r.Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>TEXT(  Service_Contract__r.Opportunity__r.Project_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Customer_Signoff__c</fullName>
        <formula>Service_Contract__r.Proposal__r.Original_Proposal_ID__r.Customer_Signoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Customer Signoff</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProspectId__c</fullName>
        <formula>Service_Contract__r.Opportunity__r.Prospect_Id__c</formula>
        <label>ProspectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REC_Price_Level_Used_For_Pricing__c</fullName>
        <label>REC Price Level Used For Pricing</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REC_Price__c</fullName>
        <label>REC Price</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Random_Cohort__c</fullName>
        <formula>RPAD( 
TEXT( 
MOD( 
value( 
text(DAY(DATEVALUE(now())))&amp; 
text(Month(DATEVALUE(now())))&amp; 
text(Year(DATEVALUE(now()))) &amp; 
(SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(TEXT(DateTimeValue(CreatedDate)), &quot;:&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;Z&quot;, &quot;&quot;)) 
) 
,value( Right( Name,5 ))) 
) 
,5,Right( Name,1 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Random Cohort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Modification_Date__c</fullName>
        <label>Rate Modification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Modification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rate Modification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount_Received__c</fullName>
        <label>Rebate Amount Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_App_Rec_d__c</fullName>
        <label>Rebate App Rec&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Application_Submitted__c</fullName>
        <label>Rebate Application Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Approval_Rec_d__c</fullName>
        <label>Rebate Approval Rec&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Borrowed_Date__c</fullName>
        <label>Rebate Borrowed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Conf_Num__c</fullName>
        <label>Rebate Conf Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Conf_Rec_d__c</fullName>
        <label>Rebate Conf Rec&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Exception__c</fullName>
        <label>Rebate Exception</label>
        <picklist>
            <picklistValues>
                <fullName>Rebate covered by CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate written off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate reimbursed to utility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebate_Expiration_Date__c</fullName>
        <label>Rebate Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Form_Sent__c</fullName>
        <label>Rebate Form Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Form_Signed__c</fullName>
        <label>Rebate Form Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Guaranteed_by_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate Guaranteed by Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate_ID__c</fullName>
        <label>Rebate ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Notes__c</fullName>
        <label>Rebate Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rebate_Rec_d__c</fullName>
        <label>Rebate Rec&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_level_confirmed__c</fullName>
        <label>Rebate level confirmed</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_level_for_pricing__c</fullName>
        <label>Rebate level for pricing</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referral_Id__c</fullName>
        <formula>Service_Contract__r.Referral__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Method__c</fullName>
        <label>Refund Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checking Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Deposit Found</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refund_Requested__c</fullName>
        <label>Refund Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Type__c</fullName>
        <label>Refund Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit + Full Upfront</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reroof_under_array__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reroof under array</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Customer_Call_Complete__c</fullName>
        <label>Retail Customer Call Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Customer_Call_Status__c</fullName>
        <label>Retail Customer Call Status</label>
        <picklist>
            <picklistValues>
                <fullName>Left Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Appoitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Contact Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated Case to CC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retail_Loan_Draw_Date__c</fullName>
        <inlineHelpText>date the loan is drawn by the retail team</inlineHelpText>
        <label>Retail Loan Draw Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_to_Sales_Date__c</fullName>
        <label>Return to Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revised_Customer_SignOff__c</fullName>
        <label>Revised Customer SignOff</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revised_SR_Signoff__c</fullName>
        <label>Revised SR Signoff</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revival_Date__c</fullName>
        <description>Added for BSKY-6773 12/29/2015</description>
        <label>Revival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roof_Work_Sq_Footage__c</fullName>
        <label>Roof Work Sq Footage</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_M1_Payment__c</fullName>
        <formula>SO_M1_terms__c * 
(Service_Contract__r.Customer_Origination_Fee_Part_1__c + Service_Contract__r.Customer_Origination_Fee_Part_2__c)</formula>
        <label>SO M1 Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_M1_amount_paid__c</fullName>
        <label>SO M1 amount paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_M1_payment_date__c</fullName>
        <label>SO M1 payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_M1_terms__c</fullName>
        <formula>Service_Contract__r.SO_M1_terms__c</formula>
        <label>SO M1 terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_M2_Payment__c</fullName>
        <formula>SO_M2_terms__c * 
(Service_Contract__r.Customer_Origination_Fee_Part_1__c + Service_Contract__r.Customer_Origination_Fee_Part_2__c)</formula>
        <label>SO M2 Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_M2_amount_paid__c</fullName>
        <label>SO M2 amount paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_M2_payment_date__c</fullName>
        <label>SO M2 payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_M2_terms__c</fullName>
        <formula>Service_Contract__r.SO_M2_terms__c</formula>
        <label>SO M2 terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_M3_amount_paid__c</fullName>
        <label>SO M3 amount paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_M3_payment__c</fullName>
        <formula>SO_M3_terms__c * 
(Service_Contract__r.Customer_Origination_Fee_Part_1__c + Service_Contract__r.Customer_Origination_Fee_Part_2__c)</formula>
        <label>SO M3 payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_M3_payment_date__c</fullName>
        <label>SO M3 payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_M3_terms__c</fullName>
        <formula>Service_Contract__r.SO_M3_terms__c</formula>
        <label>SO M3 terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Rebate_Memo__c</fullName>
        <label>SO Rebate Memo</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Registered__c</fullName>
        <label>SREC Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC_Term__c</fullName>
        <label>SREC Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SREC_acct__c</fullName>
        <label>SREC acct</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_letter_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SREC letter sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SREC_level_Expected__c</fullName>
        <label>SREC level Expected</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_level__c</fullName>
        <label>SREC level</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SR_Signoff_Month__c</fullName>
        <formula>DATE((year( DATEVALUE( SR_Signoff__c ) )),(month( DATEVALUE( SR_Signoff__c ) )),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Signoff Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SR_Signoff__c</fullName>
        <label>SR Signoff</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <description>Contains Sales Rep email address from proposal where SC was generated</description>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <formula>Service_Contract__r.Opportunity__r.SalesRep__r.FirstName + &quot; &quot; + Service_Contract__r.Opportunity__r.SalesRep__r.LastName</formula>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>Service_Contract__r.Proposal__r.Sales_Rep__c</formula>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Construction_Start_Date__c</fullName>
        <label>Estimated Construction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Install_Date__c</fullName>
        <label>Scheduled Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Inspection_Scheduled__c</fullName>
        <label>Second Inspection Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Inspection_Signoff__c</fullName>
        <label>Second Inspection Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Permit_Signoff__c</fullName>
        <label>Secondary Permit Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Service Contract Events</relationshipLabel>
        <relationshipName>Service_Contract_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Panel_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Panel Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Audit_Complete__c</fullName>
        <label>Site Audit Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Audit_Results_Rcvd__c</fullName>
        <label>Site Audit Results Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Audit_Scheduled__c</fullName>
        <label>Site Audit Scheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Site_Notes__c</fullName>
        <label>Site Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Service_Contract__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structural_PE_Stamp__c</fullName>
        <label>Structural PE Stamp</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcontract_Material_Received__c</fullName>
        <inlineHelpText>Date material was received at a subcontracted project site.</inlineHelpText>
        <label>Subcontract Material Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subcontract_Material_Shipped__c</fullName>
        <inlineHelpText>Date material was shipped to subcontracted project site.</inlineHelpText>
        <label>Subcontract Material Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subcontract_Material_Tracking_Number__c</fullName>
        <inlineHelpText>Tracking number for materials shipped to a subcontracted project site.</inlineHelpText>
        <label>Subcontract Material Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcontract_Sent__c</fullName>
        <inlineHelpText>Date contract was sent to subcontractor for signature</inlineHelpText>
        <label>Subcontract Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subcontract_Signed__c</fullName>
        <inlineHelpText>Date subcontract signed contract</inlineHelpText>
        <label>Subcontract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subcontracted_Dollar_Amt__c</fullName>
        <inlineHelpText>Total dollar amount owed to subcontractor.</inlineHelpText>
        <label>Subcontracted Dollar Amt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submit_Final_Interconnection__c</fullName>
        <label>Submit Final Interconnection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SunRun_NTP_Costco_PO_Issued__c</fullName>
        <label>SunRun NTP Costco PO Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sunrun_Loan_Draw_Date__c</fullName>
        <inlineHelpText>date the loan is drawn by sunrun accounting team</inlineHelpText>
        <label>Sunrun Loan Draw Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TC_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TC Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <label>Test Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_M1_del__c</fullName>
        <formula>CASE 
(1, IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;REC Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
(Service_Contract__r.EPC_Price__c-Initial_Deposit_Amount__c)*M1_Terms__c, 
IF(Service_Contract__r.Install_Partner__c = &apos;Mercury Solar&apos;,1,0),(Service_Contract__r.EPC_Price__c- Initial_Deposit_Amount__c )* M1_Terms__c ,
IF(CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Solar&quot;),1,0),M1_Terms__c , 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;UR Solar&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0), Service_Contract__r.EPC_Price__c * 0, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;UR Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
Service_Contract__r.EPC_Price__c* M1_Terms__c -Initial_Deposit_Amount__c, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;UR Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0), Service_Contract__r.EPC_Price__c* 0, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Electric&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0), Service_Contract__r.EPC_Price__c * 0, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Electric&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
Service_Contract__r.EPC_Price__c* M1_Terms__c -Initial_Deposit_Amount__c, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Electric&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0), Service_Contract__r.EPC_Price__c * 0, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;Trinity Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
(Service_Contract__r.EPC_Price__c-Initial_Deposit_Amount__c)*M1_Terms__c, 
Service_Contract__r.EPC_Price__c* M1_Terms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test M1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_M2_del__c</fullName>
        <formula>CASE 
(1, 
IF(and(Service_Contract__r.Install_Partner__c =&apos;REC Solar&apos;,(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
(Service_Contract__r.EPC_Price__c-Initial_Deposit_Amount__c)*M2_Terms__c, 
IF(Service_Contract__r.Install_Partner__c = &apos;Mercury Solar&apos;,1,0),(Service_Contract__r.EPC_Price__c- Initial_Deposit_Amount__c )* M2_Terms__c, 
IF(CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Solar&quot;),1,0), (Service_Contract__r.EPC_Price__c* M2_Terms__c)-M1_Terms__c, 


IF(and(M1_Payment__c = 0,M1_Terms__c&lt;&gt;0),1,0), 0, 


IF(and(Service_Contract__r.Install_Partner__c = &apos;Trinity Solar&apos;,(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
(Service_Contract__r.EPC_Price__c-Initial_Deposit_Amount__c)*M2_Terms__c, 
Service_Contract__r.EPC_Price__c* M2_Terms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test M2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_M3_del__c</fullName>
        <formula>CASE
(1, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;REC Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0),
(Service_Contract__r.EPC_Price__c-Initial_Deposit_Amount__c)*M3_Terms__c,
IF(Service_Contract__r.Install_Partner__c = &apos;Mercury Solar&apos;,1,0),(Service_Contract__r.EPC_Price__c- Initial_Deposit_Amount__c )* M3_Terms__c,


IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;UR Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0), Service_Contract__r.EPC_Price__c - Upfront_Payment_Amount__c-Initial_Deposit_Amount__c , 



IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;UR Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Check&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0), 
Service_Contract__r.EPC_Price__c - Upfront_Payment_Amount__c ,


IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;UR Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Credit Card&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0),Service_Contract__r.EPC_Price__c - Upfront_Payment_Amount__c ,

IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Electric&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0),Service_Contract__r.EPC_Price__c - Upfront_Payment_Amount__c-Initial_Deposit_Amount__c ,

IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Electric&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Check&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0),Service_Contract__r.EPC_Price__c - Upfront_Payment_Amount__c ,

IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Electric&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Credit Card&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0),Service_Contract__r.EPC_Price__c - Upfront_Payment_Amount__c ,

IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;Trinity Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0),
(Service_Contract__r.EPC_Price__c-Initial_Deposit_Amount__c)*M3_Terms__c,
Service_Contract__r.EPC_Price__c* M3_Terms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test M3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UCC_Filed__c</fullName>
        <label>UCC Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpFront_ID__c</fullName>
        <label>UpFront ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upfront_Base_Amount__c</fullName>
        <label>Upfront Total Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Payment_Amount_Rec_d__c</fullName>
        <label>Upfront Payment Amount Rec&apos;d</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Payment_Amount__c</fullName>
        <label>Upfront Payment Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Payment_Method__c</fullName>
        <label>Upfront Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid to Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upfront_Payment_Plan__c</fullName>
        <label>Upfront Payment Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Month ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test - 12 Month ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Month Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test - 12 Month Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Month Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upfront_Payment_Rec_d_Date__c</fullName>
        <label>Upfront Payment Rec&apos;d Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upfront_Payment__c</fullName>
        <label>Upfront Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Payment_to_Finance__c</fullName>
        <label>Upfront Payment to Finance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Tax_Amount__c</fullName>
        <label>Upfront Invoice Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Total_inc_Dep_for_Ori__c</fullName>
        <formula>Upfront_Payment_Amount__c + Initial_Deposit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upfront Total (inc. Dep for Ori)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Using_Build_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify if a build partner will be subcontracted for this project.</description>
        <inlineHelpText>Will a build partner be subcontracted for this project?</inlineHelpText>
        <label>Using Build Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utility_Classification_Date__c</fullName>
        <label>Utility Classification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Utility_Classification__c</fullName>
        <label>Utility Classification</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75-100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-120%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;120%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120-250%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;250%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility_Response_Date__c</fullName>
        <label>Utility Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility_Response__c</fullName>
        <label>Utility Response</label>
        <picklist>
            <picklistValues>
                <fullName>Pend-E: Pending Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pend-R: Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pend-C: Pending, approved provided conditions are met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TROV-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TROV-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pend-E-WVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TROV1-WVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TROV2-WVT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vaulted_Ceilings__c</fullName>
        <label>Vaulted Ceilings</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (put in notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Days_Group__c</fullName>
        <formula>IF(Days_until_Welcome_Call_Made__c &lt;5 , &quot;&lt; 5 Days&quot;,
IF(AND(Days_until_Welcome_Call_Made__c &gt;= 5, Days_until_Welcome_Call_Made__c &lt;= 10) , &quot;5 -10 Days&quot;,
IF(Days_until_Welcome_Call_Made__c &gt;10 , &quot;&gt; 10 Days&quot;, &quot;Outstanding&quot;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Welcome Call Days - Group</label>
        <type>Text</type>
    </fields>
</CustomObject>